intel/bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/log.txt
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:92:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:98:31: error: assigning to 'int *' from incompatible type 'void *'
            t->input_filter = ngx_http_tfs_process_ds_input_filter;
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:99:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:128:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:134:31: error: assigning to 'int *' from incompatible type 'void *'
            t->input_filter = ngx_http_tfs_process_ds_input_filter;
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:135:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:161:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:172:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:194:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ns;
                               ^~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main/extr_.tenginemodulesngx_http_tfs_modulengx_http_tfs_peer_connection.c_ngx_http_tfs_select_peer_v1_with_main.c:201:32: error: assigning to 'int *' from incompatible type 'void *'
            t->retry_handler = ngx_http_tfs_retry_ds;
                               ^~~~~~~~~~~~~~~~~~~~~
10 errors generated.
HLS FPGA Parse FAILED.
